# 1brc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: error.rs  helper.rs  mod.rs  pool.rs  processor.rs  temperature.rs  thread_pool.rs  worker.rs
