[package]
name = "billion"
version = "0.1.0"
edition = "2021"
default-run = "billion"

[profile.release]
lto = "thin"
debug = true
incremental = true

[dependencies]
assert2 = "0.3.11"
clap = "4.4.14"
colored = "2.1.0"
fxhash = "0.2.1"
memmap2 = "0.9.3"
ptr_hash = { git = "https://github.com/ragnargrootkoerkamp/ptrhash", default_features = false }
rayon = "1.10"


[dev-dependencies]
anyhow = "1.0.79"
rand = "0.8.5"
rand_distr = "0.4.3"

[features]
no_pdep = []
